--- a/spark_df_task_session.ipynb
+++ b/spark_df_task_session.ipynb
@@ -21,8 +21,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bb240af5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "from pyspark.sql import SparkSession\n",
+    "import pyspark.sql.functions as f\n",
+    "\n",
+    "# Create SparkSession\n",
+    "spark = (SparkSession.builder \n",
+    "    .appName(\"TitanicAnalysis\") \n",
+    "    .master(\"spark://spark:7077\")  \n",
+    "    .getOrCreate())\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "15130798",
    "metadata": {},
    "outputs": [
     {
@@ -58,22 +79,11 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "from pyspark.sql import SparkSession\n",
-    "import pyspark.sql.functions as f\n",
-    "\n",
-    "# Create SparkSession\n",
-    "spark = (SparkSession.builder \n",
-    "    .appName(\"TitanicAnalysis\") \n",
-    "    .master(\"spark://spark:7077\")  \n",
-    "    .getOrCreate())\n",
-    "\n",
     "# Read CSV (use container path if inside Docker)\n",
-    "df = spark.read.csv(\"/home/jovyan/work/titanic.csv\", header=True, inferSchema=True)\n",
+    "df = spark.read.csv(\"/data/titanic.csv\", header=True, inferSchema=True)\n",
     "\n",
     "df.show(5)\n",
-    "df.printSchema()\n"
+    "df.printSchema()"
    ]
   },
   {
@@ -86,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "f344963d",
    "metadata": {},
    "outputs": [
@@ -118,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "db41942e",
    "metadata": {},
    "outputs": [
@@ -142,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "c913b7f2",
    "metadata": {},
    "outputs": [
@@ -174,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "ba8aca6f",
    "metadata": {},
    "outputs": [
@@ -184,7 +194,7 @@
        "177"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "8be6778a",
    "metadata": {},
    "outputs": [
@@ -216,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "b404b417",
    "metadata": {},
    "outputs": [
@@ -226,7 +236,7 @@
        "0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,6 +251,16 @@
    "metadata": {},
    "source": [
     "5. Save the output to a CSV file in HDFS (depi_folder)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f8278103",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_filled.write.mode(\"overwrite\").csv(\"hdfs://namenode:9000/depi_folder\", header=True)\n"
    ]
   },
   {
@@ -259,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "7e8db767",
    "metadata": {},
    "outputs": [
@@ -288,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "9d8e0cad",
    "metadata": {},
    "outputs": [
@@ -319,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "666485f5",
    "metadata": {},
    "outputs": [
@@ -345,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "7985972e",
    "metadata": {},
    "outputs": [
@@ -371,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "id": "6fd35f83",
    "metadata": {},
    "outputs": [
@@ -513,14 +533,14 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "data = pd.read_csv(\"/home/jovyan/work/titanic.csv\")\n",
+    "data = pd.read_csv(\"/data/titanic.csv\")\n",
     "data.head(5)\n"
    ]
   },
@@ -534,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "id": "83ecd8ea",
    "metadata": {},
    "outputs": [
@@ -577,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 24,
    "id": "7333f8aa",
    "metadata": {},
    "outputs": [
@@ -622,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "id": "81af09dc",
    "metadata": {},
    "outputs": [
@@ -668,6 +688,35 @@
     "14. Use-cat to display the first 20 lines of the Titanic dataset stored in HDFS.\n",
     "\n",
     "15- Move the processed output file from titanic_lab to a new directory in HDFS called titanic_results using hdfs dfs -mv.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5711b76d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#all commands\n",
+    "!root@c9e0bf9264de:/# hdfs dfs -mkdir  /titanic_lab\n",
+    "!root@c9e0bf9264de:/# hdfs dfs -ls /titanic_lab\n",
+    "\n",
+    "\n",
+    "!root@c9e0bf9264de:/# hdfs dfs -chmod 777 /titanic_lab/titanic.csv\n",
+    "!root@c9e0bf9264de:/# hdfs dfs -cat /titanic_lab/titanic.csv | head -n 20 \n",
+    "\n",
+    "#1,0,3,\"Braund, Mr. Owen Harris\",male,22,1,0,A/5 21171,7.25,,S\n",
+    "# 2,1,1,\"Cumings, Mrs. John Bradley (Florence Briggs Thayer)\",female,38,1,0,PC 17599,71.2833,C85,C\n",
+    "# 3,1,3,\"Heikkinen, Miss. Laina\",female,26,0,0,STON/O2. 3101282,7.925,,S\n",
+    "# 4,1,1,\"Futrelle, Mrs. Jacques Heath (Lily May Peel)\",female,35,1,0,113803,53.1,C123,S\n",
+    "# 5,0,3,\"Allen, Mr. William Henry\",male,35,0,0,373450,8.05,,S\n",
+    "# 6,0,3,\"Moran, Mr. James\",male,,0,0,330877,8.4583,,Q\n",
+    "# 7,0,1,\"McCarthy, Mr. Timothy J\",male,54,0,0,17463,51.8625,E46,S\n",
+    "\n",
+    "\n",
+    "\n",
+    "!root@c9e0bf9264de:/# hdfs dfs -mkdir /titanic_results\n",
+    "!hdfs dfs -mv /titanic_lab/titanic.csv /titanic_results/\n"
    ]
   }
  ],
